Wed Aug 14 00:18:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_div_struct): Remove xn and j field.  Add zn field.
	  (bigdivrem1): Follow the above change.
	  (bigdivrem_restoring): Ditto.

Tue Aug 13 23:38:17 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_div_struct): ynzero field removed.
	  (bigdivrem1): Follow the above change.
	  (bigdivrem_restoring): Ditto.

Tue Aug 13 23:01:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_restoring): Extracted from bigdivrem_normal.

Tue Aug 13 22:12:59 2013  Kenichi Kamiya  <kachick1@gmail.com>

	* random.c (rb_random_ulong_limited): coerce before check negative.
	  [Fixes GH-379]

Tue Aug 13 21:52:15 2013  Kenichi Kamiya  <kachick1@gmail.com>

	* object.c (Init_Object): undef Module#prepend_features on Class, as
	  well as Module#append_features.  [Fixes GH-376]

	* test_class.rb: Added test for above. And ensure type checking
	  on similar methods as module_function.

Tue Aug 13 08:52:18 2013  Zachary Scott  <e@zzak.io>

	* doc/syntax/literals.rdoc: [DOC] String literal concat by @cknadler
	  [Fixes GH-380] https://github.com/ruby/ruby/pull/380

Mon Aug 12 23:07:21 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_marks_test): inhibit gc for st's operation.

Mon Aug 12 15:59:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_whole_match_p): treat CR in middle of a line as a
	  mere whitespace.

Mon Aug 12 15:16:58 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_prepend_module): make T_ICLASS object shady because
	  this T_ICLASS object seems to share method table with other class
	  objects. It was causes WB miss.
	  TODO: need to know the data structure.

	* test/ruby/test_module.rb: add a test for WB miss.

Mon Aug 12 13:47:54 2013  Zachary Scott  <e@zzak.io>

	* process.c: [DOC] RDoc formatting of Process.clock_gettime

Mon Aug 12 13:29:09 2013  Zachary Scott  <e@zzak.io>

	* lib/yaml/dbm.rb: [DOC] Document call-seq for YAML::DBM
